Shifted ownership of content folder onto client application.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@ docs/
 *.lst
 *.sln
 .temp/
+builds/
+content/all/shaders/testFrag.spv
+content/all/shaders/testFrag.spv.log
+content/all/shaders/testVert.spv
+content/all/shaders/testVert.spv.log
