Launch the engine as it is while continuing development with the engine.

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ content/all/shaders/testFrag.spv
 content/all/shaders/testFrag.spv.log
 content/all/shaders/testVert.spv
 content/all/shaders/testVert.spv.log
+*.suo
